--- a/codefresh.yml
+++ b/codefresh.yml
@@ -13,7 +13,7 @@ steps:
     description: Free text description
     candidate: ${{build-prj}}
     tag: ${{CF_BRANCH}}
-    registry: AKIAJOWZS37TIODARAJQ.dkr.ecr.us-east-1.amazonaws.com
+    registry: ${{AWS_REGISTRY}}
     credentials:
       username: ${{AWS_ACCESS_KEY_ID}}
       password: ${{AWS_SECRET_ACCESS_KEY}}
