--- a/codefresh.yml
+++ b/codefresh.yml
@@ -15,6 +15,6 @@ steps:
     tag: ${{CF_BRANCH}}
     registry: ${{AWS_REGISTRY}}
     credentials:
-      username: ${{AWS_ACCESS_KEY_ID}}
+      username: ${{AWS_ACCOUNT_ID}}
       password: ${{AWS_SECRET_ACCESS_KEY}}
     fail-fast: false
